--- a/laShop/View/Base.lproj/Main.storyboard
+++ b/laShop/View/Base.lproj/Main.storyboard
@@ -301,6 +301,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sectionController" translatesAutoresizingMaskIntoConstraints="NO" id="nfE-d9-FEQ">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40392156862745099" green="0.50196078431372548" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2CW-vi-qbo" customClass="RoundButton" customModule="laShop" customModuleProvider="target">
                                 <rect key="frame" x="222" y="339" width="341" height="109"/>
@@ -347,7 +348,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BA0-iZ-4yj" customClass="DesignableView" customModule="laShop" customModuleProvider="target">
-                                <rect key="frame" x="200" y="311" width="400" height="329"/>
+                                <rect key="frame" x="-450" y="311" width="400" height="329"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pYe-aR-adw" customClass="DesignableView" customModule="laShop" customModuleProvider="target">
